[package]
name = "jellyfish-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
